--- a/main.css
+++ b/main.css
@@ -19,8 +19,7 @@ div#about_me {
     background: white;
     max-width: 50%;
     font-size: 1.5em;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     padding: 1em;
     border-radius: 100px 100px 0 0;
 }
@@ -36,13 +35,10 @@ div#projects {
 }
 
 div#container {
-display: inline-block;
+    width: 350px;
     height: auto;
-    background: wheat;
     margin: 0 auto;
     position: relative;
-    
-    
 }
 
 ul {
